--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Maze Game",
-  "short_name": "Maze",
+  "name": "Roll a Dice",
+  "short_name": "Roll Dice",
   "icons": [{
     "src": "images/logo-ccs-60.png",
       "sizes": "60x60",
